--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Ragini</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <canvas id="canvas"></canvas>
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/index.js"></script>
 </body>
